Partial fix of http://issues.apache.org/jira/browse/DIR-241 . Some lines in table cells are still too long to wrap, because they don't contain any whitespaces, e.g. fully qualified class names
git-svn-id: https://svn.apache.org/repos/asf/directory/skins/trunk@752958 13f79535-47bb-0310-9956-ffa450edef68

--- a/triplesec-skin/src/main/resources/css/site.css
+++ b/triplesec-skin/src/main/resources/css/site.css
@@ -67,11 +67,7 @@ a.newWindow,a.newWindow:link,a.newWindow:visited,a.newWindow:active,a.newWindow:
 
 .source {
     border: 1px solid #999;
-    /*
-  margin-left: 5px;
-  margin-right: 10px;
-*/
-    width: 99%;
+    width: 775px;
 }
 
 #container {
@@ -276,10 +272,12 @@ table.bodyTable th {
     background-color: #bbb;
     text-align: left;
     font-weight: bold;
+    word-wrap: break-word;
 }
 
 table.bodyTable th,table.bodyTable td {
     font-size: 1em;
+    word-wrap: break-word;
 }
 
 table.bodyTable tr.a {
